--- a/store-config (2).json
+++ b/store-config (2).json
@@ -285,30 +285,130 @@
     "أبيض",
     "أسود",
     "أحمر",
-    "أزرق"
+    "أزرق",
+    "أخضر",
+    "وردي",
+    "رمادي",
+    "أصفر"
   ],
   "AVAILABLE_SIZES": [
     "S",
+    "S1",
+    "S2",
+    "S3",
     "M",
+    "M1",
+    "M2",
+    "M3",
     "L",
     "XL",
     "XXL",
-    "A"
+    "XXXL",
+    "38",
+    "39",
+    "40",
+    "41",
+    "42",
+    "43",
+    "44",
+    "45",
+    "45",
+    "46",
+    "47",
+    "48",
+    "49"
   ],
   "SIZE_GUIDE": {
-    "XS": {
+    "38": {
       "heightFrom": 150,
       "heightTo": 160,
-      "weightFrom": 40,
-      "weightTo": 55,
-      "enabled": true
+      "weightFrom": 50,
+      "weightTo": 70,
+      "enabled": false
+    },
+    "39": {
+      "heightFrom": 152,
+      "heightTo": 162,
+      "weightFrom": 53,
+      "weightTo": 74,
+      "enabled": false
+    },
+    "40": {
+      "heightFrom": 154,
+      "heightTo": 164,
+      "weightFrom": 56,
+      "weightTo": 78,
+      "enabled": false
+    },
+    "41": {
+      "heightFrom": 156,
+      "heightTo": 166,
+      "weightFrom": 59,
+      "weightTo": 82,
+      "enabled": false
+    },
+    "42": {
+      "heightFrom": 158,
+      "heightTo": 168,
+      "weightFrom": 62,
+      "weightTo": 86,
+      "enabled": false
+    },
+    "43": {
+      "heightFrom": 160,
+      "heightTo": 170,
+      "weightFrom": 65,
+      "weightTo": 90,
+      "enabled": false
+    },
+    "44": {
+      "heightFrom": 162,
+      "heightTo": 172,
+      "weightFrom": 68,
+      "weightTo": 94,
+      "enabled": false
+    },
+    "45": {
+      "heightFrom": 164,
+      "heightTo": 174,
+      "weightFrom": 71,
+      "weightTo": 98,
+      "enabled": false
+    },
+    "46": {
+      "heightFrom": 166,
+      "heightTo": 176,
+      "weightFrom": 74,
+      "weightTo": 102,
+      "enabled": false
+    },
+    "47": {
+      "heightFrom": 168,
+      "heightTo": 178,
+      "weightFrom": 77,
+      "weightTo": 106,
+      "enabled": false
+    },
+    "48": {
+      "heightFrom": 170,
+      "heightTo": 180,
+      "weightFrom": 80,
+      "weightTo": 110,
+      "enabled": false
+    },
+    "49": {
+      "heightFrom": 172,
+      "heightTo": 182,
+      "weightFrom": 83,
+      "weightTo": 114,
+      "enabled": false
     },
     "S": {
       "heightFrom": 160,
       "heightTo": 175,
       "weightFrom": 50,
       "weightTo": 65,
-      "enabled": true
+      "enabled": false
     },
     "M": {
       "heightFrom": 170,
@@ -338,12 +438,54 @@
       "weightTo": 120,
       "enabled": true
     },
-    "A": {
+    "S1": {
       "heightFrom": 160,
-      "heightTo": 200,
+      "heightTo": 180,
       "weightFrom": 50,
-      "weightTo": 120,
-      "enabled": true
+      "weightTo": 80,
+      "enabled": false
+    },
+    "S2": {
+      "heightFrom": 160,
+      "heightTo": 180,
+      "weightFrom": 50,
+      "weightTo": 80,
+      "enabled": false
+    },
+    "S3": {
+      "heightFrom": 160,
+      "heightTo": 180,
+      "weightFrom": 50,
+      "weightTo": 80,
+      "enabled": false
+    },
+    "M1": {
+      "heightFrom": 160,
+      "heightTo": 180,
+      "weightFrom": 50,
+      "weightTo": 80,
+      "enabled": false
+    },
+    "M2": {
+      "heightFrom": 160,
+      "heightTo": 180,
+      "weightFrom": 50,
+      "weightTo": 80,
+      "enabled": false
+    },
+    "M3": {
+      "heightFrom": 160,
+      "heightTo": 180,
+      "weightFrom": 50,
+      "weightTo": 80,
+      "enabled": false
+    },
+    "XXXL": {
+      "heightFrom": 195,
+      "heightTo": 210,
+      "weightFrom": 105,
+      "weightTo": 140,
+      "enabled": false
     }
   }
 }
