--- a/store-config (2).json
+++ b/store-config (2).json
@@ -262,7 +262,7 @@
   "STORE_INFO": {
     "name": "متجر الأطفال",
     "storeIcon": "👑",
-    "storeTitle": "👑 أحدث موديلات الأطفال",
+    "storeTitle": "👑 أحدث الموديلات ",
     "tagline": "متجر أفخم الملابس",
     "phoneNumbers": [
       "0671466489",
