--- a/config/store-config.json
+++ b/config/store-config.json
@@ -579,13 +579,14 @@
     }
   },
   "POINTS_SYSTEM": {
-    "currentPoints": 482,
+    "currentPoints": 481,
     "remainingDays": 29,
     "lastReset": "2025-12-12T00:27:32.315Z",
     "planType": "free",
     "monthlyPoints": 500,
     "resetPeriod": 30,
-    "currentMonthDays": 30
+    "currentMonthDays": 30,
+    "lastUpdate": "2025-12-13T12:07:08.735Z"
   },
   "FREE_DELIVERY_PRODUCTS": [
     1765456782838
